Analizador_Lexico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALIAS
    AND
    BEGINC
    BREAK
    CASE
    CDER
    CIZQ
    ELSE
    ENDC
    FUNCION
    LDER
    LIZQ
    OR

Grammar

Rule 0     S' -> codigo
Rule 1     codigo -> algoritmo
Rule 2     codigo -> algoritmo codigo
Rule 3     algoritmo -> asignacion
Rule 4     algoritmo -> sentenciaWHILE
Rule 5     algoritmo -> sentenciaFOR
Rule 6     algoritmo -> puts
Rule 7     algoritmo -> unless
Rule 8     algoritmo -> comentarios
Rule 9     algoritmo -> sentenciaIf
Rule 10    unless -> UNLESS comparacion codigo END
Rule 11    sentenciaFOR -> FOR variables IN range DO codigo END
Rule 12    range -> ENTERO RANGO ENTERO
Rule 13    puts -> PUTS CADENA
Rule 14    sentenciaWHILE -> WHILE comparacion DO codigo END
Rule 15    asignacion -> variables IGUAL expresion
Rule 16    expresion -> valor
Rule 17    expresion -> valor operadorMat expresion
Rule 18    expresion -> PIZQ valor operadorMat expresion PDER
Rule 19    comparacion -> expresion operadorComp expresion
Rule 20    comparacion -> PIZQ expresion PDER operadorComp expresion
Rule 21    operadorMat -> MAS
Rule 22    operadorMat -> RESTA
Rule 23    operadorMat -> PROD
Rule 24    operadorMat -> DIVISION
Rule 25    operadorMat -> POTENCIA
Rule 26    operadorComp -> MAYOR
Rule 27    operadorComp -> MENOR
Rule 28    operadorComp -> COMP_IGUAL
Rule 29    operadorComp -> DIFERENTE
Rule 30    valor -> ENTERO
Rule 31    valor -> variables
Rule 32    valor -> CADENA
Rule 33    valor -> HASH
Rule 34    valor -> ARRAY
Rule 35    variables -> VARIABLE_LOCAL
Rule 36    variables -> VARIABLE_GLOBAL
Rule 37    variables -> VARIABLE_OBJETO
Rule 38    variables -> VARIABLE_CLASE
Rule 39    variables -> CONSTANTE
Rule 40    sentenciaIf -> IF comparacion codigo END
Rule 41    comentarios -> COMENTARIOL

Terminals, with rules where they appear

ALIAS                : 
AND                  : 
ARRAY                : 34
BEGINC               : 
BREAK                : 
CADENA               : 13 32
CASE                 : 
CDER                 : 
CIZQ                 : 
COMENTARIOL          : 41
COMP_IGUAL           : 28
CONSTANTE            : 39
DIFERENTE            : 29
DIVISION             : 24
DO                   : 11 14
ELSE                 : 
END                  : 10 11 14 40
ENDC                 : 
ENTERO               : 12 12 30
FOR                  : 11
FUNCION              : 
HASH                 : 33
IF                   : 40
IGUAL                : 15
IN                   : 11
LDER                 : 
LIZQ                 : 
MAS                  : 21
MAYOR                : 26
MENOR                : 27
OR                   : 
PDER                 : 18 20
PIZQ                 : 18 20
POTENCIA             : 25
PROD                 : 23
PUTS                 : 13
RANGO                : 12
RESTA                : 22
UNLESS               : 10
VARIABLE_CLASE       : 38
VARIABLE_GLOBAL      : 36
VARIABLE_LOCAL       : 35
VARIABLE_OBJETO      : 37
WHILE                : 14
error                : 

Nonterminals, with rules where they appear

algoritmo            : 1 2
asignacion           : 3
codigo               : 2 10 11 14 40 0
comentarios          : 8
comparacion          : 10 14 40
expresion            : 15 17 18 19 19 20 20
operadorComp         : 19 20
operadorMat          : 17 18
puts                 : 6
range                : 11
sentenciaFOR         : 5
sentenciaIf          : 9
sentenciaWHILE       : 4
unless               : 7
valor                : 16 17 18
variables            : 11 15 31

Parsing method: LALR

state 0

    (0) S' -> . codigo
    (1) codigo -> . algoritmo
    (2) codigo -> . algoritmo codigo
    (3) algoritmo -> . asignacion
    (4) algoritmo -> . sentenciaWHILE
    (5) algoritmo -> . sentenciaFOR
    (6) algoritmo -> . puts
    (7) algoritmo -> . unless
    (8) algoritmo -> . comentarios
    (9) algoritmo -> . sentenciaIf
    (15) asignacion -> . variables IGUAL expresion
    (14) sentenciaWHILE -> . WHILE comparacion DO codigo END
    (11) sentenciaFOR -> . FOR variables IN range DO codigo END
    (13) puts -> . PUTS CADENA
    (10) unless -> . UNLESS comparacion codigo END
    (41) comentarios -> . COMENTARIOL
    (40) sentenciaIf -> . IF comparacion codigo END
    (35) variables -> . VARIABLE_LOCAL
    (36) variables -> . VARIABLE_GLOBAL
    (37) variables -> . VARIABLE_OBJETO
    (38) variables -> . VARIABLE_CLASE
    (39) variables -> . CONSTANTE

    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    PUTS            shift and go to state 13
    UNLESS          shift and go to state 14
    COMENTARIOL     shift and go to state 15
    IF              shift and go to state 16
    VARIABLE_LOCAL  shift and go to state 17
    VARIABLE_GLOBAL shift and go to state 18
    VARIABLE_OBJETO shift and go to state 19
    VARIABLE_CLASE  shift and go to state 20
    CONSTANTE       shift and go to state 21

    codigo                         shift and go to state 1
    algoritmo                      shift and go to state 2
    asignacion                     shift and go to state 3
    sentenciaWHILE                 shift and go to state 4
    sentenciaFOR                   shift and go to state 5
    puts                           shift and go to state 6
    unless                         shift and go to state 7
    comentarios                    shift and go to state 8
    sentenciaIf                    shift and go to state 9
    variables                      shift and go to state 10

state 1

    (0) S' -> codigo .



state 2

    (1) codigo -> algoritmo .
    (2) codigo -> algoritmo . codigo
    (1) codigo -> . algoritmo
    (2) codigo -> . algoritmo codigo
    (3) algoritmo -> . asignacion
    (4) algoritmo -> . sentenciaWHILE
    (5) algoritmo -> . sentenciaFOR
    (6) algoritmo -> . puts
    (7) algoritmo -> . unless
    (8) algoritmo -> . comentarios
    (9) algoritmo -> . sentenciaIf
    (15) asignacion -> . variables IGUAL expresion
    (14) sentenciaWHILE -> . WHILE comparacion DO codigo END
    (11) sentenciaFOR -> . FOR variables IN range DO codigo END
    (13) puts -> . PUTS CADENA
    (10) unless -> . UNLESS comparacion codigo END
    (41) comentarios -> . COMENTARIOL
    (40) sentenciaIf -> . IF comparacion codigo END
    (35) variables -> . VARIABLE_LOCAL
    (36) variables -> . VARIABLE_GLOBAL
    (37) variables -> . VARIABLE_OBJETO
    (38) variables -> . VARIABLE_CLASE
    (39) variables -> . CONSTANTE

    $end            reduce using rule 1 (codigo -> algoritmo .)
    END             reduce using rule 1 (codigo -> algoritmo .)
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    PUTS            shift and go to state 13
    UNLESS          shift and go to state 14
    COMENTARIOL     shift and go to state 15
    IF              shift and go to state 16
    VARIABLE_LOCAL  shift and go to state 17
    VARIABLE_GLOBAL shift and go to state 18
    VARIABLE_OBJETO shift and go to state 19
    VARIABLE_CLASE  shift and go to state 20
    CONSTANTE       shift and go to state 21

    algoritmo                      shift and go to state 2
    codigo                         shift and go to state 22
    asignacion                     shift and go to state 3
    sentenciaWHILE                 shift and go to state 4
    sentenciaFOR                   shift and go to state 5
    puts                           shift and go to state 6
    unless                         shift and go to state 7
    comentarios                    shift and go to state 8
    sentenciaIf                    shift and go to state 9
    variables                      shift and go to state 10

state 3

    (3) algoritmo -> asignacion .

    WHILE           reduce using rule 3 (algoritmo -> asignacion .)
    FOR             reduce using rule 3 (algoritmo -> asignacion .)
    PUTS            reduce using rule 3 (algoritmo -> asignacion .)
    UNLESS          reduce using rule 3 (algoritmo -> asignacion .)
    COMENTARIOL     reduce using rule 3 (algoritmo -> asignacion .)
    IF              reduce using rule 3 (algoritmo -> asignacion .)
    VARIABLE_LOCAL  reduce using rule 3 (algoritmo -> asignacion .)
    VARIABLE_GLOBAL reduce using rule 3 (algoritmo -> asignacion .)
    VARIABLE_OBJETO reduce using rule 3 (algoritmo -> asignacion .)
    VARIABLE_CLASE  reduce using rule 3 (algoritmo -> asignacion .)
    CONSTANTE       reduce using rule 3 (algoritmo -> asignacion .)
    $end            reduce using rule 3 (algoritmo -> asignacion .)
    END             reduce using rule 3 (algoritmo -> asignacion .)


state 4

    (4) algoritmo -> sentenciaWHILE .

    WHILE           reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    FOR             reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    PUTS            reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    UNLESS          reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    COMENTARIOL     reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    IF              reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    VARIABLE_LOCAL  reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    VARIABLE_GLOBAL reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    VARIABLE_OBJETO reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    VARIABLE_CLASE  reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    CONSTANTE       reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    $end            reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    END             reduce using rule 4 (algoritmo -> sentenciaWHILE .)


state 5

    (5) algoritmo -> sentenciaFOR .

    WHILE           reduce using rule 5 (algoritmo -> sentenciaFOR .)
    FOR             reduce using rule 5 (algoritmo -> sentenciaFOR .)
    PUTS            reduce using rule 5 (algoritmo -> sentenciaFOR .)
    UNLESS          reduce using rule 5 (algoritmo -> sentenciaFOR .)
    COMENTARIOL     reduce using rule 5 (algoritmo -> sentenciaFOR .)
    IF              reduce using rule 5 (algoritmo -> sentenciaFOR .)
    VARIABLE_LOCAL  reduce using rule 5 (algoritmo -> sentenciaFOR .)
    VARIABLE_GLOBAL reduce using rule 5 (algoritmo -> sentenciaFOR .)
    VARIABLE_OBJETO reduce using rule 5 (algoritmo -> sentenciaFOR .)
    VARIABLE_CLASE  reduce using rule 5 (algoritmo -> sentenciaFOR .)
    CONSTANTE       reduce using rule 5 (algoritmo -> sentenciaFOR .)
    $end            reduce using rule 5 (algoritmo -> sentenciaFOR .)
    END             reduce using rule 5 (algoritmo -> sentenciaFOR .)


state 6

    (6) algoritmo -> puts .

    WHILE           reduce using rule 6 (algoritmo -> puts .)
    FOR             reduce using rule 6 (algoritmo -> puts .)
    PUTS            reduce using rule 6 (algoritmo -> puts .)
    UNLESS          reduce using rule 6 (algoritmo -> puts .)
    COMENTARIOL     reduce using rule 6 (algoritmo -> puts .)
    IF              reduce using rule 6 (algoritmo -> puts .)
    VARIABLE_LOCAL  reduce using rule 6 (algoritmo -> puts .)
    VARIABLE_GLOBAL reduce using rule 6 (algoritmo -> puts .)
    VARIABLE_OBJETO reduce using rule 6 (algoritmo -> puts .)
    VARIABLE_CLASE  reduce using rule 6 (algoritmo -> puts .)
    CONSTANTE       reduce using rule 6 (algoritmo -> puts .)
    $end            reduce using rule 6 (algoritmo -> puts .)
    END             reduce using rule 6 (algoritmo -> puts .)


state 7

    (7) algoritmo -> unless .

    WHILE           reduce using rule 7 (algoritmo -> unless .)
    FOR             reduce using rule 7 (algoritmo -> unless .)
    PUTS            reduce using rule 7 (algoritmo -> unless .)
    UNLESS          reduce using rule 7 (algoritmo -> unless .)
    COMENTARIOL     reduce using rule 7 (algoritmo -> unless .)
    IF              reduce using rule 7 (algoritmo -> unless .)
    VARIABLE_LOCAL  reduce using rule 7 (algoritmo -> unless .)
    VARIABLE_GLOBAL reduce using rule 7 (algoritmo -> unless .)
    VARIABLE_OBJETO reduce using rule 7 (algoritmo -> unless .)
    VARIABLE_CLASE  reduce using rule 7 (algoritmo -> unless .)
    CONSTANTE       reduce using rule 7 (algoritmo -> unless .)
    $end            reduce using rule 7 (algoritmo -> unless .)
    END             reduce using rule 7 (algoritmo -> unless .)


state 8

    (8) algoritmo -> comentarios .

    WHILE           reduce using rule 8 (algoritmo -> comentarios .)
    FOR             reduce using rule 8 (algoritmo -> comentarios .)
    PUTS            reduce using rule 8 (algoritmo -> comentarios .)
    UNLESS          reduce using rule 8 (algoritmo -> comentarios .)
    COMENTARIOL     reduce using rule 8 (algoritmo -> comentarios .)
    IF              reduce using rule 8 (algoritmo -> comentarios .)
    VARIABLE_LOCAL  reduce using rule 8 (algoritmo -> comentarios .)
    VARIABLE_GLOBAL reduce using rule 8 (algoritmo -> comentarios .)
    VARIABLE_OBJETO reduce using rule 8 (algoritmo -> comentarios .)
    VARIABLE_CLASE  reduce using rule 8 (algoritmo -> comentarios .)
    CONSTANTE       reduce using rule 8 (algoritmo -> comentarios .)
    $end            reduce using rule 8 (algoritmo -> comentarios .)
    END             reduce using rule 8 (algoritmo -> comentarios .)


state 9

    (9) algoritmo -> sentenciaIf .

    WHILE           reduce using rule 9 (algoritmo -> sentenciaIf .)
    FOR             reduce using rule 9 (algoritmo -> sentenciaIf .)
    PUTS            reduce using rule 9 (algoritmo -> sentenciaIf .)
    UNLESS          reduce using rule 9 (algoritmo -> sentenciaIf .)
    COMENTARIOL     reduce using rule 9 (algoritmo -> sentenciaIf .)
    IF              reduce using rule 9 (algoritmo -> sentenciaIf .)
    VARIABLE_LOCAL  reduce using rule 9 (algoritmo -> sentenciaIf .)
    VARIABLE_GLOBAL reduce using rule 9 (algoritmo -> sentenciaIf .)
    VARIABLE_OBJETO reduce using rule 9 (algoritmo -> sentenciaIf .)
    VARIABLE_CLASE  reduce using rule 9 (algoritmo -> sentenciaIf .)
    CONSTANTE       reduce using rule 9 (algoritmo -> sentenciaIf .)
    $end            reduce using rule 9 (algoritmo -> sentenciaIf .)
    END             reduce using rule 9 (algoritmo -> sentenciaIf .)


state 10

    (15) asignacion -> variables . IGUAL expresion

    IGUAL           shift and go to state 23


state 11

    (14) sentenciaWHILE -> WHILE . comparacion DO codigo END
    (19) comparacion -> . expresion operadorComp expresion
    (20) comparacion -> . PIZQ expresion PDER operadorComp expresion
    (16) expresion -> . valor
    (17) expresion -> . valor operadorMat expresion
    (18) expresion -> . PIZQ valor operadorMat expresion PDER
    (30) valor -> . ENTERO
    (31) valor -> . variables
    (32) valor -> . CADENA
    (33) valor -> . HASH
    (34) valor -> . ARRAY
    (35) variables -> . VARIABLE_LOCAL
    (36) variables -> . VARIABLE_GLOBAL
    (37) variables -> . VARIABLE_OBJETO
    (38) variables -> . VARIABLE_CLASE
    (39) variables -> . CONSTANTE

    PIZQ            shift and go to state 26
    ENTERO          shift and go to state 28
    CADENA          shift and go to state 30
    HASH            shift and go to state 31
    ARRAY           shift and go to state 32
    VARIABLE_LOCAL  shift and go to state 17
    VARIABLE_GLOBAL shift and go to state 18
    VARIABLE_OBJETO shift and go to state 19
    VARIABLE_CLASE  shift and go to state 20
    CONSTANTE       shift and go to state 21

    comparacion                    shift and go to state 24
    expresion                      shift and go to state 25
    valor                          shift and go to state 27
    variables                      shift and go to state 29

state 12

    (11) sentenciaFOR -> FOR . variables IN range DO codigo END
    (35) variables -> . VARIABLE_LOCAL
    (36) variables -> . VARIABLE_GLOBAL
    (37) variables -> . VARIABLE_OBJETO
    (38) variables -> . VARIABLE_CLASE
    (39) variables -> . CONSTANTE

    VARIABLE_LOCAL  shift and go to state 17
    VARIABLE_GLOBAL shift and go to state 18
    VARIABLE_OBJETO shift and go to state 19
    VARIABLE_CLASE  shift and go to state 20
    CONSTANTE       shift and go to state 21

    variables                      shift and go to state 33

state 13

    (13) puts -> PUTS . CADENA

    CADENA          shift and go to state 34


state 14

    (10) unless -> UNLESS . comparacion codigo END
    (19) comparacion -> . expresion operadorComp expresion
    (20) comparacion -> . PIZQ expresion PDER operadorComp expresion
    (16) expresion -> . valor
    (17) expresion -> . valor operadorMat expresion
    (18) expresion -> . PIZQ valor operadorMat expresion PDER
    (30) valor -> . ENTERO
    (31) valor -> . variables
    (32) valor -> . CADENA
    (33) valor -> . HASH
    (34) valor -> . ARRAY
    (35) variables -> . VARIABLE_LOCAL
    (36) variables -> . VARIABLE_GLOBAL
    (37) variables -> . VARIABLE_OBJETO
    (38) variables -> . VARIABLE_CLASE
    (39) variables -> . CONSTANTE

    PIZQ            shift and go to state 26
    ENTERO          shift and go to state 28
    CADENA          shift and go to state 30
    HASH            shift and go to state 31
    ARRAY           shift and go to state 32
    VARIABLE_LOCAL  shift and go to state 17
    VARIABLE_GLOBAL shift and go to state 18
    VARIABLE_OBJETO shift and go to state 19
    VARIABLE_CLASE  shift and go to state 20
    CONSTANTE       shift and go to state 21

    comparacion                    shift and go to state 35
    expresion                      shift and go to state 25
    valor                          shift and go to state 27
    variables                      shift and go to state 29

state 15

    (41) comentarios -> COMENTARIOL .

    WHILE           reduce using rule 41 (comentarios -> COMENTARIOL .)
    FOR             reduce using rule 41 (comentarios -> COMENTARIOL .)
    PUTS            reduce using rule 41 (comentarios -> COMENTARIOL .)
    UNLESS          reduce using rule 41 (comentarios -> COMENTARIOL .)
    COMENTARIOL     reduce using rule 41 (comentarios -> COMENTARIOL .)
    IF              reduce using rule 41 (comentarios -> COMENTARIOL .)
    VARIABLE_LOCAL  reduce using rule 41 (comentarios -> COMENTARIOL .)
    VARIABLE_GLOBAL reduce using rule 41 (comentarios -> COMENTARIOL .)
    VARIABLE_OBJETO reduce using rule 41 (comentarios -> COMENTARIOL .)
    VARIABLE_CLASE  reduce using rule 41 (comentarios -> COMENTARIOL .)
    CONSTANTE       reduce using rule 41 (comentarios -> COMENTARIOL .)
    $end            reduce using rule 41 (comentarios -> COMENTARIOL .)
    END             reduce using rule 41 (comentarios -> COMENTARIOL .)


state 16

    (40) sentenciaIf -> IF . comparacion codigo END
    (19) comparacion -> . expresion operadorComp expresion
    (20) comparacion -> . PIZQ expresion PDER operadorComp expresion
    (16) expresion -> . valor
    (17) expresion -> . valor operadorMat expresion
    (18) expresion -> . PIZQ valor operadorMat expresion PDER
    (30) valor -> . ENTERO
    (31) valor -> . variables
    (32) valor -> . CADENA
    (33) valor -> . HASH
    (34) valor -> . ARRAY
    (35) variables -> . VARIABLE_LOCAL
    (36) variables -> . VARIABLE_GLOBAL
    (37) variables -> . VARIABLE_OBJETO
    (38) variables -> . VARIABLE_CLASE
    (39) variables -> . CONSTANTE

    PIZQ            shift and go to state 26
    ENTERO          shift and go to state 28
    CADENA          shift and go to state 30
    HASH            shift and go to state 31
    ARRAY           shift and go to state 32
    VARIABLE_LOCAL  shift and go to state 17
    VARIABLE_GLOBAL shift and go to state 18
    VARIABLE_OBJETO shift and go to state 19
    VARIABLE_CLASE  shift and go to state 20
    CONSTANTE       shift and go to state 21

    comparacion                    shift and go to state 36
    expresion                      shift and go to state 25
    valor                          shift and go to state 27
    variables                      shift and go to state 29

state 17

    (35) variables -> VARIABLE_LOCAL .

    IGUAL           reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    MAS             reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    RESTA           reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    PROD            reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    DIVISION        reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    POTENCIA        reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    MAYOR           reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    MENOR           reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    COMP_IGUAL      reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    DIFERENTE       reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    IN              reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    WHILE           reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    FOR             reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    PUTS            reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    UNLESS          reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    COMENTARIOL     reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    IF              reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    VARIABLE_LOCAL  reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    VARIABLE_GLOBAL reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    VARIABLE_OBJETO reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    VARIABLE_CLASE  reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    CONSTANTE       reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    $end            reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    END             reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    PDER            reduce using rule 35 (variables -> VARIABLE_LOCAL .)
    DO              reduce using rule 35 (variables -> VARIABLE_LOCAL .)


state 18

    (36) variables -> VARIABLE_GLOBAL .

    IGUAL           reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    MAS             reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    RESTA           reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    PROD            reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    DIVISION        reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    POTENCIA        reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    MAYOR           reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    MENOR           reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    COMP_IGUAL      reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    DIFERENTE       reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    IN              reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    WHILE           reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    FOR             reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    PUTS            reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    UNLESS          reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    COMENTARIOL     reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    IF              reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    VARIABLE_LOCAL  reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    VARIABLE_GLOBAL reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    VARIABLE_OBJETO reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    VARIABLE_CLASE  reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    CONSTANTE       reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    $end            reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    END             reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    PDER            reduce using rule 36 (variables -> VARIABLE_GLOBAL .)
    DO              reduce using rule 36 (variables -> VARIABLE_GLOBAL .)


state 19

    (37) variables -> VARIABLE_OBJETO .

    IGUAL           reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    MAS             reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    RESTA           reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    PROD            reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    DIVISION        reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    POTENCIA        reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    MAYOR           reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    MENOR           reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    COMP_IGUAL      reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    DIFERENTE       reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    IN              reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    WHILE           reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    FOR             reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    PUTS            reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    UNLESS          reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    COMENTARIOL     reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    IF              reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    VARIABLE_LOCAL  reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    VARIABLE_GLOBAL reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    VARIABLE_OBJETO reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    VARIABLE_CLASE  reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    CONSTANTE       reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    $end            reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    END             reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    PDER            reduce using rule 37 (variables -> VARIABLE_OBJETO .)
    DO              reduce using rule 37 (variables -> VARIABLE_OBJETO .)


state 20

    (38) variables -> VARIABLE_CLASE .

    IGUAL           reduce using rule 38 (variables -> VARIABLE_CLASE .)
    MAS             reduce using rule 38 (variables -> VARIABLE_CLASE .)
    RESTA           reduce using rule 38 (variables -> VARIABLE_CLASE .)
    PROD            reduce using rule 38 (variables -> VARIABLE_CLASE .)
    DIVISION        reduce using rule 38 (variables -> VARIABLE_CLASE .)
    POTENCIA        reduce using rule 38 (variables -> VARIABLE_CLASE .)
    MAYOR           reduce using rule 38 (variables -> VARIABLE_CLASE .)
    MENOR           reduce using rule 38 (variables -> VARIABLE_CLASE .)
    COMP_IGUAL      reduce using rule 38 (variables -> VARIABLE_CLASE .)
    DIFERENTE       reduce using rule 38 (variables -> VARIABLE_CLASE .)
    IN              reduce using rule 38 (variables -> VARIABLE_CLASE .)
    WHILE           reduce using rule 38 (variables -> VARIABLE_CLASE .)
    FOR             reduce using rule 38 (variables -> VARIABLE_CLASE .)
    PUTS            reduce using rule 38 (variables -> VARIABLE_CLASE .)
    UNLESS          reduce using rule 38 (variables -> VARIABLE_CLASE .)
    COMENTARIOL     reduce using rule 38 (variables -> VARIABLE_CLASE .)
    IF              reduce using rule 38 (variables -> VARIABLE_CLASE .)
    VARIABLE_LOCAL  reduce using rule 38 (variables -> VARIABLE_CLASE .)
    VARIABLE_GLOBAL reduce using rule 38 (variables -> VARIABLE_CLASE .)
    VARIABLE_OBJETO reduce using rule 38 (variables -> VARIABLE_CLASE .)
    VARIABLE_CLASE  reduce using rule 38 (variables -> VARIABLE_CLASE .)
    CONSTANTE       reduce using rule 38 (variables -> VARIABLE_CLASE .)
    $end            reduce using rule 38 (variables -> VARIABLE_CLASE .)
    END             reduce using rule 38 (variables -> VARIABLE_CLASE .)
    PDER            reduce using rule 38 (variables -> VARIABLE_CLASE .)
    DO              reduce using rule 38 (variables -> VARIABLE_CLASE .)


state 21

    (39) variables -> CONSTANTE .

    IGUAL           reduce using rule 39 (variables -> CONSTANTE .)
    MAS             reduce using rule 39 (variables -> CONSTANTE .)
    RESTA           reduce using rule 39 (variables -> CONSTANTE .)
    PROD            reduce using rule 39 (variables -> CONSTANTE .)
    DIVISION        reduce using rule 39 (variables -> CONSTANTE .)
    POTENCIA        reduce using rule 39 (variables -> CONSTANTE .)
    MAYOR           reduce using rule 39 (variables -> CONSTANTE .)
    MENOR           reduce using rule 39 (variables -> CONSTANTE .)
    COMP_IGUAL      reduce using rule 39 (variables -> CONSTANTE .)
    DIFERENTE       reduce using rule 39 (variables -> CONSTANTE .)
    IN              reduce using rule 39 (variables -> CONSTANTE .)
    WHILE           reduce using rule 39 (variables -> CONSTANTE .)
    FOR             reduce using rule 39 (variables -> CONSTANTE .)
    PUTS            reduce using rule 39 (variables -> CONSTANTE .)
